--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -42,6 +42,7 @@
             <br>
     <center><b class="titulo-de-la-pagina">Tienda ssh</b></center>
          <p>
+          <section id="introduccion-hero">
             <i>En tienda ssh nos dedicamos a la venta configuracion e implementacion de maquinas vps.
               <br>
               <br>
@@ -63,7 +64,8 @@
         <center><h4>Beneficios de una VPS</h4></center>
         <br>
         <br>
-
+      </section id="tabla-comparativa">
+      <section>
         <table class="tabla-estilizada">
           <tr>
             <th>Beneficio</th>
@@ -110,6 +112,7 @@
             <td>Entorno de servidor independiente sin limitaciones y restricciones de planes de alojamiento compartido</td>
           </tr>
         </table>
+      </section>
         <main>
           <hr>
           <hr>
